--- a/style/css/content.css
+++ b/style/css/content.css
@@ -15,10 +15,10 @@ html[data-dark=true] .borderBox3{background-color: #282828; border-color: rgba(2
 .normalBox .boxTop .btl > *:last-child {margin-right: 0px;}
 .normalBox .boxTop .btr > * {margin-left: 15px;}
 .normalBox .boxTop .btr > *:first-child {margin-left: 0;}
-.normalBox2{border: 1px solid #d9e1e7; margin-bottom: 15px;}
+.normalBox2{border: 1px solid #aaa; margin-bottom: 15px;}
 html[data-dark=true] .normalBox2{background-color: #282828; border-color: rgba(231, 236, 240, 0.2);}
 /* searchBox1 */
-.searchBox1{background: #b7c3d4;border: 1px solid #aabac7;border-radius: 12px;padding: 25px 20px 20px;color: #153d77;font-size: 13px;margin-bottom: 20px;font-family: PretendardM, sans-serif;position: relative;}
+.searchBox1{background: #b7c3d4;border: 1px solid #aabac7;border-radius: 12px;padding: 25px 20px 20px;color: #153d77;font-size: 15px;margin-bottom: 20px;font-family: PretendardM, sans-serif;position: relative;}
 .searchBox1 input[type=text], .searchBox1 select{border-color: #fff;}
 .searchContentW{display: -webkit-box; display: -ms-flexbox; display: flex;}
 .searchContentW .searchContentBox{width: 100%; margin-right: 10px;}
@@ -45,7 +45,7 @@ html[data-dark=true] .searchBox1{color: #fff; background: #282828; border-color:
 .chartList{display: -webkit-box; display: -ms-flexbox; display: flex; margin-bottom: 20px;}
 .chartList li{width: 100%; padding: 28px 25px; border-radius: 8px; margin-left: 24px; box-sizing: border-box;}
 .chartList li:first-child{margin-left: 0;}
-.chartList li .chartW{display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-right: 15px; border: 4px solid #d9e1e7; width: 106px; height: 106px; border-radius: 50%; text-align: center; display: none;}
+.chartList li .chartW{display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-right: 15px; border: 4px solid #aaa; width: 106px; height: 106px; border-radius: 50%; text-align: center; display: none;}
 .chartList li .textW .title{font-family: PretendardSB,sans-serif; font-size: 18px; color: #fff; line-height: 1.2em; margin-bottom: 6px;}
 .chartList li .textW p{font-family: PretendardM,sans-serif; font-size: 15px; color: rgba(255, 255, 255, 0.7);}
 .chartList li .textW p span{font-family: PretendardB,sans-serif; font-size: 22px; color: #fff; margin-left: 8px; position: relative; top: 1px;}
@@ -194,7 +194,7 @@ html[data-dark=true] #divPopup2 .popupType1 .popupCont2{background-color: #000;}
 html[data-dark=true] #divPopup2 .popupType1 .closeBtn .light{display: none;}
 html[data-dark=true] #divPopup2 .popupType1 .closeBtn .dark{display: inline-block;}
 
-.popupType2{width: 100%; height: 100vh; overflow: hidden; display: none; position: relative;}
+.popupType2{width: 100%; height: calc(var(--vh, 1vh) * 100); overflow: hidden; display: none; position: relative;}
 .popupType2 .popupTop{background-color: #e7ecf0; padding: 20px 15px 15px; position: absolute; top: 0; left: 0; width: 100%; z-index: 1;}
 .popupType2 .popupTop .popupTit{font-family: PretendardB, sans-serif; font-size: 15px; color: #000000; line-height: 1.2em;}
 .popupType2 .popupTop .popupTit .state{display: inline-block; width: 20px; height: 20px; border-radius: 50%; margin-right: 15px; vertical-align: bottom; background-color: #0090ff;}
