--- a/style/css/common.css
+++ b/style/css/common.css
@@ -312,8 +312,8 @@ html[data-dark=true] .tableType1 td{border-color: rgba(231, 236, 240, 0.1); colo
 .tableType2.hover tbody tr:hover{background-color: #f7f8fa;}
 .tableType2 tr{border-bottom: 1px solid #cdd6dd;}
 .tableType2 tr:last-child{border-bottom: 0;}
-.tableType2 th{font-size: 13px; color: #000000; font-family: PretendardB, sans-serif; border: 1px solid #e7ecf0; height: 36px;border-bottom: 1px solid #e7ecf0; background-color: #ffffff; padding: 0 11px; border-top: 1px solid #e7ecf0;}
-.tableType2 td{font-size: 12px; color: #000000; font-family: PretendardB, sans-serif; border: 1px solid #e7ecf0; height: 34px; padding: 8px 15px; text-align: center; box-sizing: border-box;}
+.tableType2 th{font-size: 13px; color: #000000; font-family: PretendardB, sans-serif; border: 1px solid #d9e1e7; height: 36px;border-bottom: 1px solid #d9e1e7; background-color: #ffffff; padding: 0 11px; border-top: 1px solid #d9e1e7;}
+.tableType2 td{font-size: 12px; color: #000000; font-family: PretendardB, sans-serif; border: 1px solid #d9e1e7; height: 34px; padding: 8px 15px; text-align: center; box-sizing: border-box;}
 .tableType2 td.name{font-size: 11px; color: #000000; font-family: PretendardM, sans-serif; text-align: left;}
 .tableType2 td .state{display: inline-block; width: 11px; height: 11px; border-radius: 3px; background-color: #0090ff;}
 .tableType2 td a{color: inherit;}
@@ -325,14 +325,14 @@ html[data-dark=true] .tableType2 td{border-color: rgba(231, 236, 240, 0.1); colo
 
 .tableType3{background: #fff;}
 .tableType3.hover tbody tr:hover{background-color: #f7f8fa;}
-.tableType3 tbody{border-bottom: 1px solid #e7ecf0;}
-.tableType3 tbody > tr > td{font-size: 13px; color: #000000; font-family: PretendardM, sans-serif; border-right: 1px solid #e7ecf0; height: 24px; padding: 6px 11px; text-align: left;}
-.tableType3 thead > tr > th{border-bottom: 1px solid #e7ecf0;}
+.tableType3 tbody{border-bottom: 1px solid #d9e1e7;}
+.tableType3 tbody > tr > td{font-size: 13px; color: #000000; font-family: PretendardM, sans-serif; border-right: 1px solid #d9e1e7; height: 24px; padding: 6px 11px; text-align: left;}
+.tableType3 thead > tr > th{border-bottom: 1px solid #d9e1e7;}
 .tableType3 thead > tr > th:last-child{border-right: 0;}
-.tableType3 tr{border-bottom: 1px solid #e7ecf0;}
+.tableType3 tr{border-bottom: 1px solid #d9e1e7;}
 .tableType3 tr:last-child{border-bottom: 0;}
-.tableType3 th{font-size: 13px; color: #000000; font-family: PretendardB, sans-serif; border-right: 1px solid #e7ecf0; height: 36px;background-color: #ffffff; padding: 0 15px; text-align: center;}
-.tableType3 td{font-size: 13px; color: #000000; font-family: PretendardM, sans-serif; border-right: 1px solid #e7ecf0; height: 24px; padding: 6px 11px; text-align: left;}
+.tableType3 th{font-size: 13px; color: #000000; font-family: PretendardB, sans-serif; border-right: 1px solid #d9e1e7; height: 36px;background-color: #ffffff; padding: 0 15px; text-align: center;}
+.tableType3 td{font-size: 13px; color: #000000; font-family: PretendardM, sans-serif; border-right: 1px solid #d9e1e7; height: 24px; padding: 6px 11px; text-align: left;}
 .tableType3 td:last-child{border-right: 0;}
 .tableType3 td.name{font-size: 13px; color: #000000; font-family: PretendardM, sans-serif; text-align: left;}
 .tableType3 td .state{display: inline-block; width: 13px; height: 13px; border-radius: 4px; background-color: #0090ff;}
@@ -346,12 +346,12 @@ html[data-dark=true] .tableType3 td{border-color: rgba(231, 236, 240, 0.1); colo
 
 .tableType4{background: #fff;}
 .tableType4.hover tbody tr:hover{background-color: #f7f8fa;}
-.tableType4 thead > tr > th{border-bottom: 1px solid #e7ecf0;}
+.tableType4 thead > tr > th{border-bottom: 1px solid #d9e1e7;}
 .tableType4 thead > tr > th:last-child{border-right: 0;}
-.tableType4 tr{border-bottom: 1px solid #e7ecf0;}
+.tableType4 tr{border-bottom: 1px solid #d9e1e7;}
 .tableType4 tr:last-child{border-bottom: 0;}
-.tableType4 th{font-size: 12px; color: #000000; font-family: PretendardB, sans-serif; border-right: 1px solid #e7ecf0; height: 36px;background-color: #ffffff; padding: 0 15px; text-align: center;}
-.tableType4 td{font-size: 11px; color: #000000; font-family: PretendardM, sans-serif; border-right: 1px solid #e7ecf0; height: 24px; padding: 6px 11px; text-align: center;}
+.tableType4 th{font-size: 12px; color: #000000; font-family: PretendardB, sans-serif; border-right: 1px solid #d9e1e7; height: 36px;background-color: #ffffff; padding: 0 15px; text-align: center;}
+.tableType4 td{font-size: 11px; color: #000000; font-family: PretendardM, sans-serif; border-right: 1px solid #d9e1e7; height: 24px; padding: 6px 11px; text-align: center;}
 .tableType4 td:last-child{border-right: 0;}
 .tableType4 td.name{font-size: 11px; color: #000000; font-family: PretendardM, sans-serif; text-align: left;}
 .tableType4 td .state{display: inline-block; width: 11px; height: 11px; border-radius: 4px; background-color: #0090ff;}
@@ -546,7 +546,8 @@ html[data-dark=true] .calendarType2 input[type=text]{border-color: rgba(255,255,
 /* textAreaType */
 .textAreaType1{width: 100%; height: 100px; resize: none; border: 1px solid #d9e1e7; border-radius: 4px; padding:10px; box-sizing: border-box;  color: #636674;  font-family: Pretendard,sans-serif; font-size: 13px; background-color: #fff;}
 html[data-dark=true] .textAreaType1{border-color: rgba(255,255,255,0.1); background-color: rgba(255,255,255,0.85);}
-
+.resultTextArea{width: 100%!important; height: 500px; border: 1px solid #d9e1e7; border-radius: 4px; padding:10px; box-sizing: border-box;  color: #636674;  font-family: Pretendard,sans-serif; font-size: 13px; background-color: #fff;}
+html[data-dark=true] .resultTextArea{border-color: rgba(255,255,255,0.1); background-color: rgba(255,255,255,0.85);}
 
 /* 로딩바 */
 .ldPop .popupbox{min-width: 350px; min-height: 160px; background-color: #ffffff; position: absolute; left: 50%; top: calc( 50% + 22px ); transform: translate(-50%,-50%); border-radius: 20px; z-index: inherit;}
